2005-08-05  Frank Ch. Eigler  <fche@elastic.org>

	* runtest.sh: Keep around log files from crashed processes,
	those whose rc is neither 0 nor 1.
	
2005-08-05  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (query_statement|function|cu|module): Add explicit
	nested try/catch, since elfutils iteration seems to block
	exception catching.
	
2005-08-05  Frank Ch. Eigler  <fche@elastic.org>

	PR translator/1175
	* translate.cxx (*): Added unlikely() markers to most emitted error
	checks.
	(mapvar::get,set): Handle NULL<->"" impedance mismatch.
	(itervar::get_key): Ditto.  Use base index=1 for keys.
	* testsuite/buildok/one.stp: Extend.  And it runs with -p5 too.
	* stap.1: Document use of ";" statament as mechanism for grammar
	ambiguity resolution.
	* stp_check.in: Set $prefix.
	* systemtap.spec.in: Prereq kernel-devel, kernel-debuginfo,
	and not tcl.
	* tapsets.cxx: Make slightly less verbose.

2005-08-03  Graydon Hoare  <graydon@redhat.com>

	* tapsets.cxx (dwflpp): Fix address calculation logic a bit,
	and use prologue-end addresses for function probes.

2005-08-03  Frank Ch. Eigler  <fche@redhat.com>

	* stap.1: More meat, all stub sections filled.
	* elaborate.cxx (visit_assignment): Add numerous missing cases.
	* parse.cxx: Parse ".=" operator.
	* testsuite/semok/sixteen.stp: Check them.
	* main.cxx (usage): Don't show incompletely supported options.

2005-08-03  Martin Hunt  <hunt@redhat.com>

	* stp_check.in : Copy sources to /var/cache/systemtap.	
	* systemtap.spec.in: Install stp_check.
	* Makefile.am (install-exec-local): Install stp_check.
	
2005-08-03  Martin Hunt  <hunt@redhat.com>
	
	* configure.ac: Add stp_check to AC_CONFIG_FILES.
	* stp_check.in : New file.

2005-08-03  Frank Ch. Eigler  <fche@elastic.org>

	* README: Be more specific about prerequisites.
	* tapset/builtin_string.stp: New builtin.
	* testsuite/buildok/seven.stp, semko/eighteen.stp: New tests.

2005-08-03  Roland McGrath  <roland@redhat.com>
