@@ -1,3 +1,10 @@
+2005-08-08  Frank Ch. Eigler  <fche@elastic.org>
+
+	* stap.1.in: Autoconfify old man page.
+	* configure.ac: Make it so.
+	* stap.1: Removed.
+	* configure, Makefile.in, aclocal.m4: Regenerated.
+
 2005-08-05  Frank Ch. Eigler  <fche@elastic.org>
 
 	* runtest.sh: Keep around log files from crashed processes,
